--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <a><h1  class="titulo_principal"><img src="icone title.png" width="40px">Pensamento Computacional - Morozowski</h1></a>
     </header>
     <main>
+<section class="A"></section>
+<section class="B">
     <div class="menu1">
         <a><li style="list-style-type: none">exemplo1</li></a>
     </ul></div>
@@ -28,6 +30,6 @@
         <a><li style="list-style-type: none">exemplo5</li></a>
     </ul></div>
     <div class="imagem_de_espera"><img src="em construção.gif" width="64px"></div>
-    </main>
+    </section></main>
 </body>
 </html>
